# grpc-with-kafka-demo

./: docker-compose.yml  pyproject.toml  requirements.txt
grpc_services_demo/: __main__.py
grpc_services_demo/category/: __main__.py  client.py
grpc_services_demo/category/grpc_services_demo/protos/: category_pb2.py  category_pb2_grpc.py
grpc_services_demo/category_service/: category_pb2.py  category_pb2_grpc.py
grpc_services_demo/department/: __main__.py  client.py
grpc_services_demo/department/grpc_services_demo/protos/: department_pb2.py  department_pb2_grpc.py
grpc_services_demo/protos/: category.proto  department.proto  user.proto
grpc_services_demo/user/: __main__.py  client.py
grpc_services_demo/user/grpc_services_demo/protos/: user_pb2.py  user_pb2_grpc.py
grpc_services_with_kafka_demo/: __main__.py
grpc_services_with_kafka_demo/category/: __main__.py
grpc_services_with_kafka_demo/department/: __main__.py
grpc_services_with_kafka_demo/search_results/: __main__.py
grpc_services_with_kafka_demo/user/: __main__.py
